# blog-sigmoidal

./: .gitignore  04_CT_Scan.ipynb  README.md  ct_scan_python_tutorial_completo_imagens_medicas.ipynb  estimating_photometric_redshifts_using_knn.ipynb  pyproject.toml
Amostragem-e-Quantizacao/: amostragem_e_quantizacao.ipynb
Calibracao-de-Camera-OpenCV/: calibracao_camera_opencv.ipynb
Cancer-de-Mama-ML/: machine_learning_deteccao_cancer_de_mama.ipynb
Depth-Anything/: depth_anything.ipynb
Deteccao-de-Blur-com-FFT/: deteccao_blur_fft.ipynb
Distribuicoes-Estatisticas/: distribuicoes_estatisticas.ipynb  distribuicoes_estatisticas.py  metricas.json
Estimating Photometric Redshifts Using K-Nearest Neighbors/: estimating_photometric_redshifts_using_knn.ipynb
Gaussian-Splatting-LGM/: gaussian_splatting_lgm.ipynb
Geometria-Formacao-de-Imagens/: geometria_formacao_de_imagens.ipynb
Grad-CAM-Visualizando-CNNs/: gradcam_visualizando_cnns.ipynb
Implementing k-Nearest Neighbors for RR Lyrae Star Classification/: implementing_k_nearest_neighbors_for_rr_lyrae_star_classification.ipynb
Intro-PyTorch-CNN/: intro_pytorch_cnn.ipynb
Introdução-ao-MediaPipe-e-Pose-Estimation/: README.md  introdução_ao_mediapipe_e_pose_estimation.ipynb  introdução_ao_mediapipe_e_pose_estimation.py  introdução_ao_mediapipe_e_pose_estimation.ipynb
Metricas-Classificacao/: metricas.json  metricas_classificacao.ipynb  metricas_classificacao.py
ORB-SLAM-3/: orb_slam3_guia_instalacao.ipynb
Processamento-de-Nuvens-de-Pontos-Open3D/: processamento_nuvens_pontos_open3d.ipynb
(+11 files in other folders)
