[tool.poetry]
name = "blog-sigmoidal"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos@sigmoidal.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
astroML = "^1.0.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
